# ECoLangBasicClasses

./: CMakeLists.txt  README.md  main.cpp
basic/: Any.cpp  Any.hpp
basic/logical/: Boolean.cpp  Boolean.hpp
basic/numberic/: Float.cpp  Float.hpp  Int.cpp  Int.hpp
basic/strings/: Char.cpp  Char.hpp  String.cpp  String.hpp
